--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <app-root>
         <div class="splash-screen">
             <div class="splash-loader"></div>
-            <img class="splash-logo" src="assets/images/logo.png">
+            <!-- <img class="splash-logo" src="assets/images/logo.png"> -->
         </div>
         <!--
         <div class="spinner">
